src/objects/ADvendio__MediaCampaign__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__PostalRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Hier wird der Account gepflegt, an welchem später die erstellte Rechnung per Post oder E-Mail gesendet wird (ist in den meisten Fällen derselbe Account wie Debitor/Leistungsempfänger, können aber auch zwei unterschiedliche Accounts sein).</inlineHelpText>
        <label>Postal Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (Postal Recipient)</relationshipLabel>
        <relationshipName>PostalRecipientCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Pricelist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rate Cards for the whole Media Campaign. If a Rate Card is selected, only items from this Rate Card can be added to the Media Campaign.</inlineHelpText>
        <label>Rate Card</label>
        <referenceTo>ADvendio__Pricelist__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Principal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the account who is beneficiary of the media campaign.</description>
        <inlineHelpText>Enter the account who is principal of the media campaign.</inlineHelpText>
        <label>Beneficiary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (Beneficiary)</relationshipLabel>
        <relationshipName>Media_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Propability__c</fullName>
        <description>The probability will be calculated automatically according to the campaign&apos;s phase.</description>
        <formula>CASE(1, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(5%)&quot;), TEXT(ADvendio__Stage__c)= &quot;First contact&quot;), 1, 0), 0.05, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(10%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Initial Offer (w/o request)&quot;), 1, 0), 0.1, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(20%)&quot;),TEXT(ADvendio__Stage__c)= &quot;Stage 20%&quot;), 1, 0), 0.2, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(25%)&quot;),TEXT(ADvendio__Stage__c)= &quot;Stage 25%&quot;), 1, 0), 0.25, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(30%)&quot;),TEXT(ADvendio__Stage__c)= &quot;Alternative quote&quot;), 1, 0), 0.3, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(40%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Stage 40%&quot;), 1, 0), 0.4, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(50%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Offer on Request&quot;), 1, 0), 0.5, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(60%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Stage 60%&quot;), 1, 0), 0.6, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(70%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Showed interest&quot;), 1, 0), 0.7, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(75%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Stage 75%&quot;), 1, 0), 0.75, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(80%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Positive Feedback (Agency/Advertiser)&quot;), 1, 0), 0.8, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(90%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Stage 90%&quot;), 1, 0), 0.9, IF(OR(CONTAINS(TEXT(ADvendio__Stage__c), &quot;(100%)&quot;), TEXT(ADvendio__Stage__c)= &quot;Booked&quot;, TEXT(ADvendio__Stage__c)= &quot;IO received&quot;), 1, 0), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The probability will be calculated automatically according to the campaign&apos;s phase.</inlineHelpText>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublisherAccounting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox defines if a Media Campaign is created by &quot;Publisher Accounting&quot; or not.</description>
        <label>Publisher Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Quote_Language__c</fullName>
        <description>Language to use for generated quote.</description>
        <inlineHelpText>Language to use for generated quote.</inlineHelpText>
        <label>Quote Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                    <default>true</default>
                    <label>German</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Quote_Locale__c</fullName>
        <description>Locale to use for formatting the number, date etc. in generated quote.</description>
        <inlineHelpText>Locale to use for formatting the number, date etc. in generated quote.</inlineHelpText>
        <label>Locale format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>de_DE</fullName>
                    <default>true</default>
                    <label>de_DE</label>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>de_CH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_1__c</fullName>
        <description>Enter a quantity discount which is automatically applied to all campaign items.</description>
        <inlineHelpText>Enter a quantity discount which is automatically applied to all campaign items.</inlineHelpText>
        <label>Quantity Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_2__c</fullName>
        <description>Enter a customer discount which is automatically applied to all campaign items.</description>
        <inlineHelpText>Enter a customer discount which is automatically applied to all campaign items.</inlineHelpText>
        <label>Customer Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Rate_Discount_3__c</fullName>
        <description>Enter a agency discount which is automatically applied to all campaign items.</description>
        <inlineHelpText>Enter a agency discount which is automatically applied to all campaign items.</inlineHelpText>
        <label>Agency Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reason_for_refusal__c</fullName>
        <description>If the stage is set on &apos;Lost&apos; you can enter here the reason for refusal.</description>
        <inlineHelpText>If the stage is set on &apos;Lost&apos; you can enter here the reason for refusal.</inlineHelpText>
        <label>Reason for refusal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADvendio__Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Order not applicable</fullName>
                </value>
                <value>
                    <fullName>Price too high</fullName>
                </value>
                <value>
                    <fullName>Competitor chosen</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No advertiser feedback</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ReverseChargeMechanism__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is true - the VAT Type on any campaign item will be ignored, set to zero, and on the invoice pdf the Custom Label Reverse-Charge Mechanism Note is displayed.</description>
        <inlineHelpText>Please check this box to apply the Reverse-Charge Process on this Media Campaign.</inlineHelpText>
        <label>Reverse-Charge Mechanism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SellerCountry__c</fullName>
        <description>Displays the Country of the legal entity or the Salesforce Org.</description>
        <formula>IF (ISBLANK(  ADvendio__LegalEntity__c ),$Organization.Country,
 IF (ISBLANK(TEXT(ADvendio__LegalEntity__r.ADvendio__CountryIsoCode__c)),
       ADvendio__LegalEntity__r.ADvendio__Country__c, TEXT(ADvendio__LegalEntity__r.ADvendio__CountryIsoCode__c)  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Country of the legal entity or the Salesforce Org.</inlineHelpText>
        <label>Seller Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Show_Third_Party_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Show Third Party Commission on the quote?</inlineHelpText>
        <label>Show Third Party Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Stage__c</fullName>
        <description>Enter the stage in which the media campaign currently is in.</description>
        <inlineHelpText>Enter the stage in which the media campaign currently is in.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First contact</fullName>
                </value>
                <value>
                    <fullName>Stage 25%</fullName>
                </value>
                <value>
                    <fullName>Offer on Request</fullName>
                </value>
                <value>
                    <fullName>Stage 75%</fullName>
                </value>
                <value>
                    <fullName>Stage 90%</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Offer denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Sum_of_Agency_Commission__c</fullName>
        <description>This field adds up the agency comissions of all campaign items.</description>
        <formula>ADvendio__Discounted_Amount__c -  ADvendio__Amount_net_net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field adds up the agency comissions of all campaign items.</inlineHelpText>
        <label>Sum of Agency Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Sum_of_taxes__c</fullName>
        <description>This field displays the sum of all taxes.</description>
        <formula>IF( ADvendio__Show_Third_Party_Commission__c = FALSE, VALUE( TEXT(ADvendio__Tax__c) ) / 100 *  ADvendio__Amount_net_net__c, VALUE( TEXT(ADvendio__Tax__c) ) / 100 *  ADvendio__Amount_net3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Altes Advendio-Feld, nicht mehr zu verwenden (siehe auch Kundenvorgang #1980)</inlineHelpText>
        <label>Sum of taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__Tax__c</fullName>
        <description>Enter the tax value.</description>
        <inlineHelpText>Altes Advendio-Feld, nicht mehr zu verwenden (siehe auch Kundenvorgang #1980)</inlineHelpText>
        <label>Tax (%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>19</fullName>
                    <default>true</default>
                    <label>19</label>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountTotal__c</fullName>
        <description>This formula adds up the total amount of all items of type 1 and type 2 depending on the taxable type you have defined. The Standard is N2.</description>
        <formula>ADvendio__TaxableAmountVatType1__c +  ADvendio__TaxableAmountVatType2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula adds up the total amount of all items of type 1 and type 2 depending on the taxable type you have defined. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (Total)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountType__c</fullName>
        <description>Please choose which Amount field you like to calculate your taxes on. The standard uses N2.</description>
        <inlineHelpText>Please choose which Amount field you like to calculate your taxes on. The standard uses N2.</inlineHelpText>
        <label>Taxable Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__TaxableAmountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountVatType1__c</fullName>
        <description>This field gets calculated by an APEX script and displays the total amount of all items of type 1 depending on the taxable type you have defined. The Standard is N2.</description>
        <inlineHelpText>This field gets calculated by an APEX script and displays the total amount of all items of type 1 depending on the taxable type you have defined. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (VAT Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TaxableAmountVatType2__c</fullName>
        <description>This field gets calculated by an APEX script and displays the total amount of all items of type 2 depending on the taxable type you have defined. The Standard is N2.</description>
        <inlineHelpText>This field gets calculated by an APEX script and displays the total amount of all items of type 2 depending on the taxable type you have defined. The Standard is N2.</inlineHelpText>
        <label>Taxable Amount (VAT Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TermsOfPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms of Payment</label>
        <referenceTo>ADvendio__TermsOfPayment__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>MediaCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__TestCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Testing Managed Packages</description>
        <label>TestCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Third_party_commission__c</fullName>
        <description>Enter the Third party comission value.</description>
        <inlineHelpText>Enter the Third party comission value.</inlineHelpText>
        <label>Third party commission</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__TurnoverAmountConverted__c</fullName>
        <formula>BLANKVALUE(ADvendio__TurnoverAmount__c,0) / IF(ADvendio__ExchangeRate__c=0,1 ,BLANKVALUE(ADvendio__ExchangeRate__c, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover Amount (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TurnoverAmountNetConverted__c</fullName>
        <formula>BLANKVALUE( ADvendio__Amount_net_net__c ,0) / IF(ADvendio__ExchangeRate__c=0,1 ,BLANKVALUE(ADvendio__ExchangeRate__c, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnover Amount Net(Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__TurnoverAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Turnover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>Enter the order type.</description>
        <inlineHelpText>Enter the order type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__VATExempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the whole media campaign is not being taxed.</description>
        <inlineHelpText>If this field is checked the whole media campaign is not being taxed.</inlineHelpText>
        <label>VAT Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <description>Please enter a date until the offer is valid.</description>
        <inlineHelpText>Please enter a date until the offer is valid.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatAmountType1__c</fullName>
        <description>Displays the total VAT for all items of type 1. Calculated by an APEX script.</description>
        <inlineHelpText>Displays the total VAT for all items of type 1. Calculated by an APEX script.</inlineHelpText>
        <label>VAT Amount (Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatAmountType2__c</fullName>
        <description>Displays the total VAT for all items of type 2. Calculated by an APEX script.</description>
        <inlineHelpText>Displays the total VAT for all items of type 2. Calculated by an APEX script.</inlineHelpText>
        <label>VAT Amount (Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatRateType1__c</fullName>
        <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom. It is automatically set by an apex script.</description>
        <inlineHelpText>This VAT rate has been defined by your administrator and depends on which country is buying from whom. It is automatically set by an apex script.</inlineHelpText>
        <label>VAT Rate % (Type 1)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatRateType2__c</fullName>
        <description>This VAT rate has been defined in your custom settings and depends on which country is buying from whom and the type in your ad spec. It is automatically set by an apex script.</description>
        <inlineHelpText>This VAT rate has been defined in your custom settings and depends on which country is buying from whom and the type in your ad spec. It is automatically set by an apex script.</inlineHelpText>
        <label>VAT Rate % (Type 2)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatTotal__c</fullName>
        <description>Formula to add the VAT of type 1 and type 2.</description>
        <formula>ADvendio__VatAmountType1__c +  ADvendio__VatAmountType2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to add the VAT of type 1 and type 2.</inlineHelpText>
        <label>VAT Total</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__eCPM__c</fullName>
        <description>This value calculates the net revenue per booked quantity multiplied with 1000. For non-CPM itmes the guaranteed impressions are used for calculations.</description>
        <formula>IF (ADvendio__AI_Quantity__c= 0 , 0, ADvendio__Amount_net_net_of_all__c  /  ADvendio__AI_Quantity__c  * 1000)</formula>
        <inlineHelpText>This value calculates the net revenue per booked quantity multiplied with 1000. For non-CPM itmes the guaranteed impressions are used for calculations.</inlineHelpText>
        <label>eCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__external_Media_Campaign_Name__c</fullName>
        <description>Enter the media campaign&apos;s name as you want it to appear on your proposal.</description>
        <inlineHelpText>Enter the media campaign&apos;s name as you want it to appear on your proposal.</inlineHelpText>
        <label>External Media Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__invoice_recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the account who is Debtor (Invoice Recipient) for the media campaign.</description>
        <inlineHelpText>Enter the account who is invoice recipient for the media campaign.</inlineHelpText>
        <label>Debtor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Campaigns (invoice recipient)</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__your_reference_number2__c</fullName>
        <description>The reference number will be displayed on the proposal and is the reference number of the agency.</description>
        <inlineHelpText>The reference number will be displayed on the proposal and is the reference number of the agency.</inlineHelpText>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__your_reference_number__c</fullName>
        <label>Reference Number (deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <externalId>true</externalId>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDigNaechsterPositionEnde__c</fullName>
        <description>bestimmt anhand der unterliegenden Positionen, welche Position zur nächst endet/wird per Trigger befüllt; im PAM Cockpit angezeigt</description>
        <inlineHelpText>Datumanzeige der Position, die als nächstes endet</inlineHelpText>
        <label>Nächster Position-Ende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDigNaechsterPositionStart__c</fullName>
        <description>bestimmt anhand der unten liegenden Positionen, wann der nächste Flight startet/wird per Trigger befüllt; im PAM Cockpit angezeigt</description>
        <inlineHelpText>Datumanzeige der Position, die als nächstes startet</inlineHelpText>
        <label>Nächster Position-Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_AbgerechneterMN2__c</fullName>
        <label>Abgerechneter MN2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Abrechnungsart__c</fullName>
        <description>Aus den unterliegenden LineItems werden aus dem Feld ‘Abrechnungsart’ die Werte verkettet (Dublette ausgeschlossen) und in dem Feld auf der Mediakampagne zusammengeschrieben; erscheint in PAM Cockpit</description>
        <inlineHelpText>Aus den unterliegenden Positionen übernommen (z.B. “CPD” und “CPC” ergeben in der Mediakampagne den Wert “CPD/CPC”)</inlineHelpText>
        <label>Abrechnungsart</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_AdManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>KV: 02243</description>
        <inlineHelpText>Welcher AdManager betreut diese Mediakampagne?</inlineHelpText>
        <label>Ad Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00eD0000001Qf2o</value>
            </filterItems>
            <filterItems>
                <field>User.P7S1_Sphere__c</field>
                <operation>equals</operation>
                <value>SomDe</value>
            </filterItems>
            <infoMessage>Wert ist nicht vorhanden bzw. stimmt nicht mit Filterkriterien überein: Der Benutzer muss aktiv sein und das Profil SomDig_PAM haben.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Mediakampagnen1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_AdServerOrderId__c</fullName>
        <description>AdServer-Order-Id der Positionen;
vorausgesetzt - alle Positionen sind mit dem gleichen (DFP) AdServer verlinkt! (Positionen, die nicht mit DFP verlinkt sind (AdServerId leer) werden dabei nicht berücksichtigt.</description>
        <inlineHelpText>AdServer-Order-Id der Positionen;
vorausgesetzt - alle Positionen sind mit dem gleichen (DFP) AdServer verlinkt! (Positionen, die nicht mit DFP verlinkt sind (AdServerId leer) werden dabei nicht berücksichtigt.</inlineHelpText>
        <label>AdServer Order-Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Agenturrabatt__c</fullName>
        <description>Benutzerdefinierter Agenturrabatt, übernimmt Werte aus dem ADvendio Feld &quot;ADvendio__Rate_Discount_3__c&quot; (siehe Ticket 06062)</description>
        <label>Agenturrabatt</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Aktionsrabatt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Das Feld kommt von ProDia Pivot (manuelle Pflege durch Sales); bezieht sich auf Marketing-Aktionen, bzw. Sonderrabatte; rein informativ; hat keine Auswirkung an irgendwelche Prozesse.</description>
        <inlineHelpText>muss gekennzeichnet werden bei einem Aktionsrabatt</inlineHelpText>
        <label>Aktionsrabatt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlAdServerLI__c</fullName>
        <description>Hilfsfeld für die Berechnung von Screenshots Status (alle LIs ausgenommen &apos;Non-AdServer LIs)</description>
        <inlineHelpText>Hilfsfeld für die Berechnung von Screenshots Status (alle LIs ausgenommen &apos;Non-AdServer LIs)</inlineHelpText>
        <label>Anzahl AdServer LIs</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_PositionStatus__c</field>
            <operation>notEqual</operation>
            <value>NonAdserver</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlAllerLIs__c</fullName>
        <description>Hilfsfeld für die Berechnung der Anzahl aller LIs</description>
        <inlineHelpText>Hilfsfeld für die Berechnung der Anzahl aller LIs</inlineHelpText>
        <label>Anzahl aller LIs</label>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlDerNichtGenehmigtenLIs__c</fullName>
        <description>Hilfsfeld, diuent zur WF-Steuerung, schaltet zwischen 2 RTs</description>
        <inlineHelpText>Anzahl aller LIs, die nicht genehmigt sind (Rabatte &amp; Mindestpreis)</inlineHelpText>
        <label>Anzahl der nicht genehmigten LIs</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_RabatteFreigegebenCheck__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlFestplazierterPositionen__c</fullName>
        <description>Wie viele festplatzierte Positionen gibt es in dieser Mediakampagne?
Derzeit werden CPD und CPW berücksichtigt.</description>
        <formula>SomDig_AnzahlFestplazierungCpd__c + SomDig_AnzahlFestplazierungCPW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wie viele festplatzierte Positionen gibt es in dieser Mediakampagne?
Derzeit werden CPD und CPW berücksichtigt.</inlineHelpText>
        <label>Anzahl festplazierter Positionen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlFestplazierungCPW__c</fullName>
        <description>Wie viele Positionen mit der Abrechnungsart CPW (CostPerWeek) sind in der Mediakampagne?</description>
        <inlineHelpText>Wie viele Positionen mit der Abrechnungsart CPW (CostPerWeek) sind in der Mediakampagne?</inlineHelpText>
        <label>Anzahl Festplazierung CPW</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Billing_category__c</field>
            <operation>equals</operation>
            <value>CPW</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlFestplazierungCpd__c</fullName>
        <description>Wie viele Positionen mit der Abrechnungsart CPD (CostPerDay) sind in der Mediakampagne?</description>
        <inlineHelpText>Wie viele Positionen mit der Abrechnungsart CPD (CostPerDay) sind in der Mediakampagne?</inlineHelpText>
        <label>Anzahl Festplazierung CPD</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Billing_category__c</field>
            <operation>equals</operation>
            <value>CPD</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlNaturalrabattPositionen__c</fullName>
        <label>Anzahl Naturalrabatt Positionen</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.ADvendio__Rate_Discount_4_Name__c</field>
            <operation>equals</operation>
            <value>Positionsrabatt Natural</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_AnzahlNonMediaCi2__c</fullName>
        <description>Anzahl der NonMedia bzw. Diernstleistungs Positionen, bzw. mit Mediagattungs-Segment gleich &quot;NonMedia&quot;
30.11 (Thun): API Name geändert, damit Klonen-Konfig wieder verwendbar</description>
        <inlineHelpText>Anzahl der NonMedia bzw. Diernstleistungs Positionen, bzw. mit Mediagattungs-Segment gleich &quot;NonMedia&quot;</inlineHelpText>
        <label>Anzahl NonMedia CI</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_NonMedia__c</field>
            <operation>equals</operation>
            <value>ja</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>